--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,50 @@
+# Dependencies
 node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage
+coverage/
+.nyc_output/
+*.lcov
+
+# Build outputs
+dist/
+build/
+*.tgz
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Test artifacts
+*.log
+.cache/
+
+# Complexity reports
+complexity-report.json
+complexity-report/
+
+# JSCPD reports
+.jscpd/
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# OS
+Thumbs.db
 .DS_Store
 npm-debug.log*
